--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="<%= BASE_URL %>logo.ico">
   <link rel="stylesheet" href="css/reset.css">
   <title>
-    <%= htmlWebpackPlugin.options.title %>
+    旧图插画后台管理系统
   </title>
 </head>
 
